--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -1,3 +1,24 @@
-* {
-    font-family: var(--Irvin-Heading);
+@import url('./_variables.scss');
+
+body {
+    margin: 0;
+    font-family: var(--Adobe-Caslon-Pro);
+    font-size: var(--body-font-size);
+    line-height: var(--body-line-height);
+    background-color: black;
+    color: white;
+}
+
+h1 {
+    font-size: var(--h1-font-size);
+    line-height: var(--h1-line-height);
+    font-weight: 400;
+}
+
+h5 {
+    font-size: var(--h5-font-size);
+}
+
+h6 {
+    font-size: var(--h6-font-size);
 }
