--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -7,6 +7,8 @@ body {
     line-height: var(--body-line-height);
     background-color: black;
     color: white;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 h1 {
