--- a/app/components/gsap/Clouds.module.scss
+++ b/app/components/gsap/Clouds.module.scss
@@ -1,6 +1,9 @@
 .cloud {
     position: absolute;
     display: block;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
 }
 
 .cloud__image {
@@ -11,6 +14,8 @@
     background-position: center;
     display: block;
 }
+
+// Random positions, widths, and heights for cloud images:
 
 .cloud__0 {
     top: 40%;
