--- a/app/components/gsap/Container.module.scss
+++ b/app/components/gsap/Container.module.scss
@@ -1,4 +1,14 @@
-.gsap__container {
+.container {
+    :global(.gsap__background) {
+        top: 0; 
+        left: 0;
+        width: 100%;
+        height: 100vh;
+    }
+}
+
+
+.gsap__component {
     height: 100vh;
     width: 100vw;
     position: absolute;
