--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -11,6 +11,8 @@ body {
     overflow-x: hidden;
 }
 
+// Headers
+
 h1 {
     font-size: var(--h1-font-size);
     line-height: var(--h1-line-height);
