added styling for components, made responsive layout

--- a/app/components/gsap/Stars.module.scss
+++ b/app/components/gsap/Stars.module.scss
@@ -1,4 +1,6 @@
 .stars__image {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
+    background: url('/images/stars.png');
+    background-repeat: repeat;
 }
