--- a/app/components/ArticleHeader.module.scss
+++ b/app/components/ArticleHeader.module.scss
@@ -24,6 +24,11 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
+
+    @media screen and (max-width: 600px) {
+        width: 311px;
+        height: 509px
+    }
 }
 
 .rubric {
@@ -39,6 +44,11 @@
     font-size: 24px;
     line-height: 28px;
     font-style: italic;
+
+    @media screen and (max-width: 600px) {
+        font-size: 21px;
+        line-height: 24px;
+    }
 }
 
 .byline {
