--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -1,4 +1,7 @@
 @import url('./_variables.scss');
+* {
+    box-sizing: border-box;
+}
 
 body {
     margin: 0;
@@ -25,4 +28,7 @@ h5 {
 
 h6 {
     font-size: var(--h6-font-size);
+    margin: 0;
+    font-family: var(--Irvin);
+    text-align: center;
 }
