--- a/app/components/gsap/Clouds.module.scss
+++ b/app/components/gsap/Clouds.module.scss
@@ -15,7 +15,7 @@
     display: block;
 }
 
-// Random positions, widths, and heights for cloud images:
+// Random positions, widths, and heights for cloud images
 
 .cloud__0 {
     top: 40%;
