--- a/app/components/ArticleBody.module.scss
+++ b/app/components/ArticleBody.module.scss
@@ -23,6 +23,9 @@
         padding: 80px;
         gap: 40px;
         border: 0px;
+        p {
+            margin-bottom: -40vh;
+        }
     }
 
     @media (max-width: 768px) {
