added animated stars layer

--- a/app/components/gsap/Stars.module.scss
+++ b/app/components/gsap/Stars.module.scss
@@ -4,3 +4,12 @@
     background: url('/images/stars.png');
     background-repeat: repeat;
 }
+
+.stars__canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 100;
+}
